--- a/config.yaml
+++ b/config.yaml
@@ -9,13 +9,46 @@ output_txt: "digest.txt"
 lookback_days: 7
 
 feeds:
-  - ""
-  - ""
+- "https://RSS_INFOJOBS_RETAIL_1"
+  - "https://RSS_INFOJOBS_EDUCACION_FISICA_1"
+  - "https://RSS_EMPLEATE_RETAIL_1"
+  - "https://RSS_EMPLEATE_EDUCACION_FISICA_1"
 
 include_keywords:
   - "marketing"
   - "digital"
   - "analítica"
+  - "retail"
+  - "profesor educación física"
+  - "management"
+  - "retail"
+  - "tienda"
+  - "dependiente"
+  - "vendedor"
+  - "encargado"
+  - "store manager"
+  - "jefe de tienda"
+  - "retail manager"
+  - "visual merchandiser"
+  - "atención al cliente"
+  - "comercial retail"
+  - "moda"
+  - "textil"
+  - "calzado"
+  - "deportes"
+  - "deportivo"
+  - "sneakers"
+  - "running"
+  - "fitness"
+  - "gimnasio"
+  - "monitor deportivo"
+  - "técnico actividades deportivas"
+  - "entrenador"
+  - "educación física"
+  - "profesor educación física"
+  - "TSEAS"
+  - "TECO"
+  - "TAFAD"
 
 include_locations:
   - "Pozuelo"
@@ -26,6 +59,9 @@ include_locations:
   - "Torrelodones"
   - "Galapagar"
   - "Collado Villalba"
+  - "Aravaca"
+  - "Moncloa"
+  - "Moncloa-Aravaca"
 
 exclude_keywords:
   - "prácticas"
