--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,12 @@ include_keywords:
   - "TSEAS"
   - "TECO"
   - "TAFAD"
-
+  - "JD Ssports"
+  - "Adidas"
+  - "Nike"
+  - "El Corte Inglés"
+  - "Sprinter"
+  
 include_locations:
   - "Pozuelo"
   - "Majadahonda"
